<resources>
    <string name="app_name">ChatMate</string>
    <string name="input_hint_username">Username</string>
    <string name="input_hint_password">Password</string>
    <string name="input_hint_password2">Confirm password</string>

    <!--  Login  -->
    <string name="lbl_login">Login</string>
    <string name="login_desc">Please sign in to continue.</string>
    <string name="login_sign_up">Don\'t have an account? <font color='#FFBB86FC'>Sign Up</font></string>
    <string name="link_forgot_password"><font color='#FFBB86FC'>Forgot password?</font></string>

    <!--  Register  -->
    <string name="lbl_register">Register</string>
    <string name="register_already_account">Already have account? <font color='#FFBB86FC'>Login</font></string>
    <string name="register_desc">An account is required to use the app.</string>


</resources>