<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:text="@string/lbl_register"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/registerDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.199"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/registerDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/register_desc"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/inputUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.241"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:ems="10"
        android:hint="@string/input_hint_username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/textRegisterUsernameFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:height="0dp"
        android:text=""
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="10"
        android:hint="@string/input_hint_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:tooltipText="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegisterUsernameFeedback"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/inputPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:hint="@string/input_hint_password2"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="0dp"
        android:paddingBottom="10dp"
        android:tooltipText="password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/textRegisterPasswordFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="5dp"
        android:height="0dp"
        android:text=""
        android:textColor="@color/design_default_color_error"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPassword2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_bg"
        android:text="@string/lbl_register"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_baseline_login_24"
        app:iconGravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textRegisterPasswordFeedback"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="@string/register_already_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>